[package]
name = "rescue_poseidon"
description = "Sponge construction based Algebraic Hash Functions"
keywords = ["poseidon", "rescue", "rescue prime", "sponge", "duplex sponge", "algebraic hash function", "arithmetization oriented hash function"]
version = "0.3.0"
authors = ["Sait Imamoglu <si@matterlabs.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

franklin_crypto = {package = "franklin-crypto", features = ["plonk"], git = "https://github.com/matter-labs/franklin-crypto", branch = "beta-with-new-hmac"}
# franklin_crypto = {package = "franklin-crypto", features = ["plonk"], path = "../franklin-crypto"}
num-bigint = "0.3"
num-integer = "0.1"
num-iter = "0.1"
rand = "0.4"
byteorder = "1"
num-traits = "0.2"
sha3 = "0.9.1"


[dev-dependencies]
# reference poseidon does not uses specialization so some tests will fail.
poseidon_hash = {git = "https://github.com/shamatar/poseidon_hash"}
# poseidon_hash = {path = "../../shamatar/poseidon_hash"}

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[features]