[package]
name = "rescue_poseidon"
description = "Sponge construction based Algebraic Hash Functions"
keywords = ["poseidon", "rescue", "sponge"]
version = "0.5.2"
authors = ["Sait Imamoglu <si@matterlabs.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"

typemap_rev = "0.3"
lazy_static = "1.4"
franklin_crypto = {package = "franklin-crypto", features = ["plonk"], version = "=0.2.2" }
num-bigint = "0.3"
num-integer = "0.1"
num-iter = "0.1"
rand = "0.4"
byteorder = "1"
num-traits = "0.2"
sha3 = "0.9.1"
serde = {version = "1", features = ["derive"]}
addchain = "0.2"
smallvec = "1.9"
blake2 = "0.10"
rayon = {version = "1.5", optional = true}
# lazy_static = {version = "1.4", optional = true}
futures = {version = "0.3", features = ["executor", "thread-pool"], optional = true}
arrayvec = "0.7"
log = "0.4.19"

[dev-dependencies]
# reference poseidon does not uses specialization so some tests will fail.
poseidon_hash = {git = "https://github.com/shamatar/poseidon_hash"}
# poseidon_hash = {path = "../../shamatar/poseidon_hash"}
criterion = "0.3"
hex = "0.4"

# [profile.bench]
# opt-level = 3
# debug = false
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false

[features]
default = []
rayon = ["dep:rayon"]
futures = ["dep:futures"]

[[bench]]
name = "benches"
harness = false
